# Earie

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
include/: AppController.h  AudioBackend.h  AudioDevice.h  AudioSession.h  AudioWorker.h  ComInit.h  ConfigStore.h  DeviceListModel.h  IconCache.h  SessionListModel.h  UpdateCoalescer.h  WinAcrylic.h  WinTrayPositioner.h
include/win/: ComPtr.h  Hr.h  Utf.h
installer/: clean_release.bat  create_installer.bat  user_post_deploy.bat
installer/installer/: installer.nsi  license.txt
qml/: HiddenItemsWindow.qml  Main.qml
qml/components/: DeviceCell.qml  DeviceMasterRow.qml  SessionRow.qml  StyledMenu.qml  StyledMenuItem.qml
qml/styles/: SliderStyle.qml  Theme.qml
src/: AppController.cpp  AudioBackend.cpp  AudioDevice.cpp  AudioSession.cpp  AudioWorker.cpp  ComInit.cpp  ConfigStore.cpp  DeviceListModel.cpp  IconCache.cpp  SessionListModel.cpp  UpdateCoalescer.cpp  WinAcrylic.cpp  WinTrayPositioner.cpp
